More refactoring. Resumable files are removed from object upon successful upload and no longer visible if cancel is pressed.

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -145,9 +145,14 @@ body {
     padding: 15px;
 }
 
-th {
+th.header {
     font-size: 12px;
     text-align: left;
+}
+
+th.header.files,
+th.header.option {
+    text-align: center;
 }
 
 tr.sample-header-template {
@@ -158,16 +163,11 @@ tr.sample-header-template:hover {
     background-color: #dadada;
 }
 
-.table > tbody > tr > td {
+.table > tbody > tr > .cell {
     vertical-align: middle;
     padding: 5px;
 }
 
-.table > thead > tr > th:nth-child(2) {
-    text-align: center;
-}
-
-.table > thead > tr > th:nth-child(2),
 .table > tbody > tr > td:nth-child(2) {
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -176,7 +176,7 @@ tr.sample-header-template:hover {
 
 .table > tbody > tr > .option,
 .table > tbody > tr > .sample-option,
-.table > thead > tr > th:nth-child(10) {
+.table > thead > tr > th.progress {
     text-align: right;
     padding-right: 20px;
 }
@@ -250,14 +250,9 @@ a.menu-item,
     margin-bottom: 5px;
 }
 
-.sample-table td:nth-child(10),
-.sample-table th:nth-child(10) {
+.sample-table td.file-progress.progress {
     padding-right: 10px;
     width: 100px;
-    display: none;
-}
-
-.collapsed {
     display: none;
 }
 
